--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Shiv Yucel
 email: yucelshiv@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is a test change.
-baseurl: "" # the subpath of your site, e.g. /blog
+#baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: yucelshiv
 github_username:  shivyucel
