--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,11 @@ header_pages:
   - CV.markdown
 
 # Build settings
-theme: minima
+#remove minima theme as it is now regular theme
+# theme: minima
 plugins:
   - jekyll-feed
-
+  - jekyll-seo-tag
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
