--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ title: Shiv Yucel
 email: yucelshiv@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  
+
+google_analytics: UA-216010967-1
+
+
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sgyucel
