--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Shiv Yucel
+title: Shiv Yücel
 email: yucelshiv@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  
