--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,8 @@ header_pages:
   #- interests/index.markdown
   - projects/index.markdown
   - Publications.markdown
-
+  - CV.markdown
+  
 # Build settings
 #remove minima theme as it is now regular theme
 # theme: minima
